# cpg-flow-lrs-annotation

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml  get_version.py
src/lrs_annotation/: bam_to_cram.toml  bam_to_cram_stages.py  inputs.py  lrs_annotation.toml  run_workflow.py  snps_indels_annotation.toml  snps_indels_annotation_stages.py  svs_annotation.toml  svs_annotation_stages.py  utils.py
src/lrs_annotation/hail_scripts/computed_fields/: variant_id.py  vep.py
src/lrs_annotation/jobs/: AnnotateCohortMatrixtable.py  AnnotateDatasetMatrixtable.py  AnnotateWithVep.py  BamToCram.py  ExportMtToElastic.py  ExportMtToElasticsearch.py  GatherVcfs.py  MergeVcfs.py  PicardIntervals.py  ReformatVcfs.py  SomalierExtract.py  SplitMergedVcfAndGetSitesOnlyForVep.py
src/lrs_annotation/jobs/snps_indels/: AnnotateCohortMatrixtable.py  AnnotateDatasetMatrixtable.py  AnnotateWithVep.py  ExportMtToElastic.py  GatherVcfs.py  MergeVcfs.py  ModifyVcf.py  ModifyVcfJobs.py  PicardIntervals.py  ReformatVcfs.py  SplitMergedVcfAndGetSitesOnlyForVep.py  SplitVcfForVep.py  VcfToUnannotatedMt.py
src/lrs_annotation/jobs/svs/: AnnotateCohortMatrixtable.py  AnnotateDatasetMatrixtable.py  AnnotateVcfGatk.py  AnnotateVcfSTRVCTVRE.py  ExportMtToElastic.py  MergeVcfs.py  ModifySvVcf.py  ReformatVcfs.py  SnifflesModifyVcf.py  WriteCleanedPedFile.py
src/lrs_annotation/scripts/: annotate_cohort_snps_indels.py  annotate_dataset_mt.py  mt_to_es.py  subset_mt_to_sgs.py  vep_json_to_ht.py
src/lrs_annotation/scripts/snps_indels/: annotate_dataset_mt.py  mt_to_es_without_dataproc.py  vcf_modifier.py  vcf_to_annotate_cohort_mt.py  vcf_to_unannotated_mt.py  vep_json_to_ht.py
src/lrs_annotation/scripts/svs/: annotate_dataset_mt.py  sniffles_vcf_modifier.py  sv_vcf_modifier.py  vcf_to_annotate_cohort_mt.py
